@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject()
    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + vanish():void
    + notValid():boolean
}

abstract class AbstractAircraft
{
    # maxHp:int
    # hp:int
    # shootNum:int
    # power:int
    # direction:int
    # shootStrategy:ShootStrategy
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + increaseHp(int increase):void
    + forward():void
    + getHp():int
    + shoot():List<BaseBullet>
}

class HeroAircraft
{
    - {static} {volatile} instance:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {static} getInstance(int locationX, int locationY, int speedX, int speedY, int hp):HeroAircraft
    + forward():void
    + shoot():List<BaseBullet>
}

class MobEnemy
{
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
}

class EliteEnemy
{
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
}

class ElitePlusEnemy
{
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
}

class EliteProEnemy
{
    + EliteProEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
}

class BossEnemy
{
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
}

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
    + getPower():int
}

class HeroBullet
{
    + HeroBullet(int locationX, int locationY, int speedX, int speedY, int power)
}

class EnemyBullet
{
    + EnemyBullet(int locationX, int locationY, int speedX, int speedY, int power)
}

abstract class AbstractProp
{
    + AbstractProp(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + {abstract} activate(HeroAircraft heroAircraft):void
}

class BloodProp
{
    - {static} {readOnly} HEAL_AMOUNT:int
    + BloodProp(int locationX, int locationY, int speedX, int speedY)
    + activate(HeroAircraft heroAircraft):void
}

class FireProp
{
    + FireProp(int locationX, int locationY, int speedX, int speedY)
    + activate(HeroAircraft heroAircraft):void
}

class SuperFireProp
{
    + SuperFireProp(int locationX, int locationY, int speedX, int speedY)
    + activate(HeroAircraft heroAircraft):void
}

class FreezeProp
{
    + FreezeProp(int locationX, int locationY, int speedX, int speedY)
    + activate(HeroAircraft heroAircraft):void
}

class BombProp
{
    + BombProp(int locationX, int locationY, int speedX, int speedY)
    + activate(HeroAircraft heroAircraft):void
}

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- AbstractProp

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- ElitePlusEnemy
AbstractAircraft <|-- EliteProEnemy
AbstractAircraft <|-- BossEnemy

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractProp <|-- BloodProp
AbstractProp <|-- FireProp
AbstractProp <|-- SuperFireProp
AbstractProp <|-- FreezeProp
AbstractProp <|-- BombProp

@enduml
